--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
     <header class="container-nav">
         <nav class="navbar">
 
-            <a href="mi-primera-pagina-html.html" class="brand">Mi página web</a>
+            <a href="index.html" class="brand">Mi página web</a>
             <ul class="nav-links">
-                <li><a href="mi-primera-pagina-html.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -30,16 +30,19 @@
             <div class="container">
 
                 <h1>Acerca de</h1>
-                <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre nuestra empresa y (amar a messi)
-                    los servicios que
-                    ofrecemos.</p>
+                <p>¡Bienvenido a nuestra página, soy un programador que recien empieza en este mundo. Aca les dejo unas fotos del mejor jugador de la historia.</p>
 
 
             </div>
+            <h2> MESSI </h2>
             <div class="img-container">
                 <img src="campeondelmundo.jpg" width="350" height="200" alt="Messi besando la copa del mundo" />
                 <img src="messicampeondechampions.jpg" width="300" height="200" alt="Messi besando la orejona" />
                 <img src="messicampeondeamerica.jpg" width="300" height="200" alt="Messi besando la copa america" />
+            </div>
+
+            <div class="greeting">
+                <p> Espero poder encontrar trabajo y vivir de esto!</p>
             </div>
 
     </main>
