--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
   <header class="container-nav">
     <nav class="navbar">
 
-      <a href="mi-primera-pagina-html.html" class="brand">Mi página web</a>
+      <a href="index.html" class="brand">Mi página web</a>
       <ul class="nav-links">
-        <li><a href="mi-primera-pagina-html.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
