--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1>Bienvenidos a mi primer Website</h1>
             <section>
                 <h2>Presentación</h2>
-                <p>Soy [Tu nombre], ¡y esta es mi primera página web!</p>
+                <p>Soy Juanma, ¡y esta es mi primera página web!</p>
                 <p>Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
             </section>
             <section>
@@ -59,7 +59,7 @@
     </main>
 
     <footer>
-        <p>Pongamos informacion sobre el desarollador o la compañia</p>
+        <p>Contactenos a parrapa43@gmai.com</p>
         <button onClick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button>
 
     </footer>
