--- a/about.html
+++ b/about.html
@@ -31,9 +31,11 @@
 
                 <h1>Acerca de</h1>
                 <p>¡Bienvenido a nuestra página, soy un programador que recien empieza en este mundo. Aca les dejo unas fotos del mejor jugador de la historia.</p>
+                <a href="https://www.instagram.com/parritajm/" id="instagram-link">@ Mi instagram.</a>
 
 
             </div>
+            
             <h2> MESSI </h2>
             <div class="img-container">
                 <img src="campeondelmundo.jpg" width="350" height="200" alt="Messi besando la copa del mundo" />
@@ -50,7 +52,7 @@
     <footer>
         <p>Pongamos informacion sobre el desarollador o la compañia</p>
         <button onClick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button>
-
+      
     </footer>
 
 
