--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   </main>
 
   <footer>
-    <p>Pongamos informacion sobre el desarollador o la compañia</p>
+    <p>Contactenos a parrapa43@gmai.com</p>
     <button onClick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button>
 
   </footer>
