--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
             </section>
         </div>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/qWcwFMAqpME"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <video width="560" height="315" src="clutch.mp4" controls></video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/p693u53Q10U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <p>Clutch impresionante.</p>
+                <video width="560" height="315" src="clutch.mp4" controls></video>
         </div>
     </main>
 
