--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
             
             <h2> MESSI </h2>
             <div class="img-container">
-                <img src="campeondelmundo.jpg" width="350" height="200" alt="Messi besando la copa del mundo" />
-                <img src="messicampeondechampions.jpg" width="300" height="200" alt="Messi besando la orejona" />
-                <img src="messicampeondeamerica.jpg" width="300" height="200" alt="Messi besando la copa america" />
+                <img src="imagenes/campeondelmundo.jpg" width="350" height="200" alt="Messi besando la copa del mundo" />
+                <img src="imagenes/messicampeondechampions.jpg" width="300" height="200" alt="Messi besando la orejona" />
+                <img src="imagenes/messicampeondeamerica.jpg" width="300" height="200" alt="Messi besando la copa america" />
             </div>
 
             <div class="greeting">
