--- a/services.html
+++ b/services.html
@@ -30,9 +30,9 @@
             <h1>Nuestros servicios</h1>
             <p>Descubre aquí los servicios que ofrecemos.</p>
             <ul>
-                <li>Servicio 1</li>
-                <li>Servicio 2</li>
-                <li>Servicio 3</li>
+                <li>Creacion de apps.</li>
+                <li>Diseños de paginas web.</li>
+                <li>Eloboost en cs y lol.</li>
             </ul>
         </div>
 
